--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.enable-spring-el-compiler=true
 spring.thymeleaf.template-resolver-order=0
 
+server.error.include-stacktrace=never
+
 server.servlet.session.tracking-modes=cookie
 server.port=8083
 
